# mlops-pratica

./: .env.example  .gitignore  Apresentacao_MLOps_Pratica.pptx  GITHUB_SETUP.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  run-local.ps1
.github/workflows/: ci.yml
dags/: pipeline_ingestao.py  pipeline_treino_embeddings.py  pipeline_treino_preditivo.py
docs/: build_apresentacao.py  build_apresentacao_v2.py  build_apresentacao_v3.py  deploy_gcp_vm.md
docs/dot/: 01_arquitetura.dot  02_eng_dados.dot  03_mlops.dot  04_devops.dot  05_dados.dot  06_gcp.dot  07_solucao_geral.dot  08_airflow_mlflow.dot
docs/mermaid/: 01_arquitetura.mmd  02_eng_dados.mmd  03_mlops.mmd  04_devops.mmd  05_dados.mmd  06_gcp.mmd  07_solucao_geral.mmd  08_airflow_mlflow.mmd
infra/airflow/: Dockerfile  requirements.txt
infra/fastapi/: Dockerfile  requirements.txt
infra/gcp/: docker-compose.override.yml  provision.sh  startup.sh
infra/mlflow/: Dockerfile
infra/postgres/: init.sql
src/mlops_pratica/: __init__.py  config.py
src/mlops_pratica/features/: tabular.py  text.py
src/mlops_pratica/ingestion/: extractor.py  hn_client.py
src/mlops_pratica/models/embeddings/: encode.py  index.py
src/mlops_pratica/models/preditivo/: register.py  train.py
src/mlops_pratica/serving/: app.py  schemas.py
src/mlops_pratica/storage/: minio_io.py  pg_io.py
src/mlops_pratica/tracking/: mlflow_utils.py
tests/: conftest.py  test_config.py  test_features.py  test_hn_client.py
