[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops-pratica"
version = "0.1.0"
description = "Prática MLOps end-to-end com Airflow + MLflow + pgvector + FastAPI"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Andre Insardi" }]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
